# axum-service

./: .env  Cargo.toml
src/: lib.rs  main.rs  router.rs
src/database/: tasks.rs  users.rs
src/routes/: get_json.rs  hello_world.rs  middleware_message.rs  mod.rs  set_middleware_custom_header.rs  validate_with_serde.rs
