[package]
name = "axum-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["macros", "headers"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
